[gd_scene load_steps=6 format=3 uid="uid://duws3qk7e45vs"]

[ext_resource type="Script" path="res://components/general/options_controller.gd" id="1_hjbun"]
[ext_resource type="Theme" uid="uid://b1a5sjt2xibwo" path="res://assets/themes/strata_theme.tres" id="1_yjy47"]
[ext_resource type="PackedScene" uid="uid://cb1ygvja2x1ty" path="res://components/general/keybind_button.tscn" id="3_iy2y2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ebb5w"]
bg_color = Color(0.207843, 0.207843, 0.207843, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n6jky"]
bg_color = Color(0.160784, 0.160784, 0.160784, 0.815686)

[node name="Options" type="CanvasLayer"]
process_mode = 3
layer = 100
visible = false
script = ExtResource("1_hjbun")

[node name="OptionsControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ConfigContainer" type="HSplitContainer" parent="OptionsControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0
dragger_visibility = 2

[node name="ConfigPanel" type="Panel" parent="OptionsControl/ConfigContainer"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
focus_neighbor_right = NodePath("../Binds")
focus_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ebb5w")

[node name="OptionsTitle" type="Label" parent="OptionsControl/ConfigContainer/ConfigPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -65.0
offset_right = 65.0
offset_bottom = 54.0
grow_horizontal = 2
theme = ExtResource("1_yjy47")
theme_override_font_sizes/font_size = 40
text = "Options
"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="OptionsButtons" type="VBoxContainer" parent="OptionsControl/ConfigContainer/ConfigPanel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5
alignment = 1

[node name="VolumeContainer" type="VBoxContainer" parent="OptionsControl/ConfigContainer/ConfigPanel/OptionsButtons"]
custom_minimum_size = Vector2(0, 130)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 12

[node name="MasterVol" type="Label" parent="OptionsControl/ConfigContainer/ConfigPanel/OptionsButtons/VolumeContainer"]
layout_mode = 2
theme = ExtResource("1_yjy47")
text = "MASTER VOLUME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Master_Toggle" type="CheckButton" parent="OptionsControl/ConfigContainer/ConfigPanel/OptionsButtons/VolumeContainer/MasterVol"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -44.0
offset_top = -12.0
offset_bottom = 12.0
grow_horizontal = 0
grow_vertical = 2
focus_neighbor_left = NodePath("../Master_Slider")
focus_neighbor_right = NodePath("../../../../../Binds/BindGrid/LEFT_B")
focus_neighbor_bottom = NodePath("../Master_Slider")
button_pressed = true

[node name="Master_Slider" type="HSlider" parent="OptionsControl/ConfigContainer/ConfigPanel/OptionsButtons/VolumeContainer/MasterVol"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.217
anchor_right = 0.5
anchor_bottom = 1.217
offset_left = -150.0
offset_top = -8.491
offset_right = 150.0
offset_bottom = 7.509
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_top = NodePath("../Master_Toggle")
focus_neighbor_bottom = NodePath("../../MusicVol/Music_Toggle")
value = 50.0
rounded = true
allow_greater = true

[node name="MusicVol" type="Label" parent="OptionsControl/ConfigContainer/ConfigPanel/OptionsButtons/VolumeContainer"]
layout_mode = 2
theme = ExtResource("1_yjy47")
text = "MUSIC VOLUME
"
horizontal_alignment = 1

[node name="Music_Toggle" type="CheckButton" parent="OptionsControl/ConfigContainer/ConfigPanel/OptionsButtons/VolumeContainer/MusicVol"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -44.0
offset_top = -12.0
offset_bottom = 12.0
grow_horizontal = 0
grow_vertical = 2
focus_neighbor_left = NodePath("../Music_Slider")
focus_neighbor_top = NodePath("../../MasterVol/Master_Slider")
focus_neighbor_right = NodePath("../../../../../Binds/BindGrid/LEFT_B")
focus_neighbor_bottom = NodePath("../Music_Slider")
button_pressed = true

[node name="Music_Slider" type="HSlider" parent="OptionsControl/ConfigContainer/ConfigPanel/OptionsButtons/VolumeContainer/MusicVol"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.217
anchor_right = 0.5
anchor_bottom = 1.217
offset_left = -150.0
offset_top = -8.491
offset_right = 150.0
offset_bottom = 7.509
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_top = NodePath("../Music_Toggle")
focus_neighbor_bottom = NodePath("../../SoundEffectVol/Effect_Toggle")
value = 50.0
rounded = true
allow_greater = true

[node name="SoundEffectVol" type="Label" parent="OptionsControl/ConfigContainer/ConfigPanel/OptionsButtons/VolumeContainer"]
layout_mode = 2
theme = ExtResource("1_yjy47")
text = "SOUND EFFECT VOLUME"
horizontal_alignment = 1

[node name="Effect_Toggle" type="CheckButton" parent="OptionsControl/ConfigContainer/ConfigPanel/OptionsButtons/VolumeContainer/SoundEffectVol"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -44.0
offset_top = -12.0
offset_bottom = 12.0
grow_horizontal = 0
grow_vertical = 2
focus_neighbor_left = NodePath("../Effect_Slider")
focus_neighbor_top = NodePath("../../MusicVol/Music_Slider")
focus_neighbor_right = NodePath("../../../../../Binds/BindGrid/RIGHT_B")
focus_neighbor_bottom = NodePath("../Effect_Slider")
button_pressed = true

[node name="Effect_Slider" type="HSlider" parent="OptionsControl/ConfigContainer/ConfigPanel/OptionsButtons/VolumeContainer/SoundEffectVol"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.217
anchor_right = 0.5
anchor_bottom = 1.217
offset_left = -150.0
offset_top = -8.491
offset_right = 150.0
offset_bottom = 7.509
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_top = NodePath("../Effect_Toggle")
focus_neighbor_bottom = NodePath("../../../ToggleFiring")
value = 50.0
rounded = true
allow_greater = true

[node name="ToggleFiring" type="CheckButton" parent="OptionsControl/ConfigContainer/ConfigPanel/OptionsButtons"]
layout_mode = 2
focus_neighbor_top = NodePath("../VolumeContainer/SoundEffectVol/Effect_Slider")
focus_neighbor_right = NodePath("../../../Binds/BindGrid/PAUSE_B")
focus_neighbor_bottom = NodePath("../Photosens_Mode")
theme = ExtResource("1_yjy47")
text = "TOGGLE FIRING"
alignment = 1

[node name="Photosens_Mode" type="CheckButton" parent="OptionsControl/ConfigContainer/ConfigPanel/OptionsButtons"]
layout_mode = 2
focus_neighbor_top = NodePath("../ToggleFiring")
focus_neighbor_right = NodePath("../../../Binds/BindGrid/SHOOT_B")
focus_neighbor_bottom = NodePath("../ResetDefKeybind")
theme = ExtResource("1_yjy47")
text = "PHOTOSENSIBILITY MODE"
alignment = 1

[node name="ResetDefKeybind" type="Button" parent="OptionsControl/ConfigContainer/ConfigPanel/OptionsButtons"]
layout_mode = 2
focus_neighbor_top = NodePath("../Photosens_Mode")
focus_neighbor_right = NodePath("../../../Binds/BindGrid/BOMB_B")
theme = ExtResource("1_yjy47")
theme_override_colors/font_hover_color = Color(1, 0.12549, 0.0862745, 1)
text = "RESET DEFAULT KEYBINDS"

[node name="Binds" type="Panel" parent="OptionsControl/ConfigContainer"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_n6jky")

[node name="BindGrid" type="GridContainer" parent="OptionsControl/ConfigContainer/Binds"]
layout_direction = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -92.5
offset_top = -217.0
offset_right = 92.5
offset_bottom = 217.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_yjy47")
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 6
columns = 2

[node name="UP" type="Label" parent="OptionsControl/ConfigContainer/Binds/BindGrid"]
layout_mode = 2
theme = ExtResource("1_yjy47")
theme_override_font_sizes/font_size = 45
text = "Up"
uppercase = true

[node name="UP_B" parent="OptionsControl/ConfigContainer/Binds/BindGrid" instance=ExtResource("3_iy2y2")]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
focus_neighbor_left = NodePath("../../../ConfigPanel/OptionsButtons/VolumeContainer/MasterVol/Master_Toggle")
focus_neighbor_right = NodePath("../../../../ExitMenu")
focus_neighbor_bottom = NodePath("../DOWN_B")
focus_next = NodePath("../DOWN_B")
focus_mode = 2
theme_override_font_sizes/font_size = 45
keybind = "move_up"

[node name="DOWN" type="Label" parent="OptionsControl/ConfigContainer/Binds/BindGrid"]
layout_mode = 2
theme = ExtResource("1_yjy47")
theme_override_font_sizes/font_size = 45
text = "Down"
uppercase = true

[node name="DOWN_B" parent="OptionsControl/ConfigContainer/Binds/BindGrid" instance=ExtResource("3_iy2y2")]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
focus_neighbor_left = NodePath("../../../ConfigPanel/OptionsButtons/VolumeContainer/MusicVol/Music_Toggle")
focus_neighbor_top = NodePath("../UP_B")
focus_neighbor_right = NodePath("../../../../ExitMenu")
focus_neighbor_bottom = NodePath("../LEFT_B")
focus_next = NodePath("../LEFT_B")
focus_previous = NodePath("../UP_B")
focus_mode = 2
theme_override_font_sizes/font_size = 45
keybind = "move_down"

[node name="LEFT" type="Label" parent="OptionsControl/ConfigContainer/Binds/BindGrid"]
layout_mode = 2
theme = ExtResource("1_yjy47")
theme_override_font_sizes/font_size = 45
text = "Left"
uppercase = true

[node name="LEFT_B" parent="OptionsControl/ConfigContainer/Binds/BindGrid" instance=ExtResource("3_iy2y2")]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
focus_neighbor_left = NodePath("../../../ConfigPanel/OptionsButtons/VolumeContainer/MasterVol/Master_Toggle")
focus_neighbor_top = NodePath("../DOWN_B")
focus_neighbor_bottom = NodePath("../RIGHT_B")
focus_next = NodePath("../RIGHT_B")
focus_previous = NodePath("../DOWN_B")
focus_mode = 2
theme_override_font_sizes/font_size = 45
keybind = "move_left"

[node name="RIGHT" type="Label" parent="OptionsControl/ConfigContainer/Binds/BindGrid"]
layout_mode = 2
theme = ExtResource("1_yjy47")
theme_override_font_sizes/font_size = 45
text = "Right"
uppercase = true

[node name="RIGHT_B" parent="OptionsControl/ConfigContainer/Binds/BindGrid" instance=ExtResource("3_iy2y2")]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
focus_neighbor_left = NodePath("../../../ConfigPanel/OptionsButtons/VolumeContainer/SoundEffectVol/Effect_Toggle")
focus_neighbor_top = NodePath("../LEFT_B")
focus_neighbor_bottom = NodePath("../PAUSE_B")
focus_next = NodePath("../PAUSE_B")
focus_previous = NodePath("../LEFT_B")
focus_mode = 2
theme_override_font_sizes/font_size = 45
keybind = "move_right"

[node name="PAUSE" type="Label" parent="OptionsControl/ConfigContainer/Binds/BindGrid"]
layout_mode = 2
theme = ExtResource("1_yjy47")
theme_override_font_sizes/font_size = 45
text = "Pause"
uppercase = true

[node name="PAUSE_B" parent="OptionsControl/ConfigContainer/Binds/BindGrid" instance=ExtResource("3_iy2y2")]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
focus_neighbor_left = NodePath("../../../ConfigPanel/OptionsButtons/ToggleFiring")
focus_neighbor_top = NodePath("../RIGHT_B")
focus_neighbor_bottom = NodePath("../SHOOT_B")
focus_next = NodePath("../SHOOT_B")
focus_previous = NodePath("../RIGHT_B")
focus_mode = 2
theme_override_font_sizes/font_size = 45
keybind = "pause"

[node name="SHOOT" type="Label" parent="OptionsControl/ConfigContainer/Binds/BindGrid"]
layout_mode = 2
theme = ExtResource("1_yjy47")
theme_override_font_sizes/font_size = 45
text = "Shoot"
uppercase = true

[node name="SHOOT_B" parent="OptionsControl/ConfigContainer/Binds/BindGrid" instance=ExtResource("3_iy2y2")]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
focus_neighbor_left = NodePath("../../../ConfigPanel/OptionsButtons/Photosens_Mode")
focus_neighbor_top = NodePath("../PAUSE_B")
focus_neighbor_bottom = NodePath("../BOMB_B")
focus_next = NodePath("../BOMB_B")
focus_previous = NodePath("../PAUSE_B")
focus_mode = 2
theme_override_font_sizes/font_size = 45
keybind = "shoot"

[node name="BOMB" type="Label" parent="OptionsControl/ConfigContainer/Binds/BindGrid"]
layout_mode = 2
theme = ExtResource("1_yjy47")
theme_override_font_sizes/font_size = 45
text = "Bomb"
uppercase = true

[node name="BOMB_B" parent="OptionsControl/ConfigContainer/Binds/BindGrid" instance=ExtResource("3_iy2y2")]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
focus_neighbor_left = NodePath("../../../ConfigPanel/OptionsButtons/ResetDefKeybind")
focus_neighbor_top = NodePath("../SHOOT_B")
focus_neighbor_bottom = NodePath("../RESET_B")
focus_next = NodePath("../RESET_B")
focus_previous = NodePath("../SHOOT_B")
focus_mode = 2
theme_override_font_sizes/font_size = 45
keybind = "bomb"

[node name="RESET" type="Label" parent="OptionsControl/ConfigContainer/Binds/BindGrid"]
layout_mode = 2
theme = ExtResource("1_yjy47")
theme_override_font_sizes/font_size = 45
text = "REset"
uppercase = true

[node name="RESET_B" parent="OptionsControl/ConfigContainer/Binds/BindGrid" instance=ExtResource("3_iy2y2")]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
focus_neighbor_left = NodePath("../../../ConfigPanel/OptionsButtons/ResetDefKeybind")
focus_neighbor_top = NodePath("../BOMB_B")
focus_previous = NodePath("../BOMB_B")
focus_mode = 2
theme_override_font_sizes/font_size = 45
keybind = "reset"

[node name="ExitMenu" type="Button" parent="OptionsControl"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -55.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = 57.0
grow_horizontal = 0
focus_neighbor_left = NodePath("../ConfigContainer/Binds/BindGrid/UP_B")
theme = ExtResource("1_yjy47")
theme_override_font_sizes/font_size = 30
text = "X"

[node name="ExitCheck" type="ConfirmationDialog" parent="OptionsControl"]
title = "EXIT"
initial_position = 1
size = Vector2i(200, 80)
theme = ExtResource("1_yjy47")
ok_button_text = "Save"
dialog_text = "  Save keybinds?"

[node name="ResetBinds" type="ConfirmationDialog" parent="OptionsControl"]
title = "CONFIRM"
initial_position = 1
size = Vector2i(251, 80)
theme = ExtResource("1_yjy47")
ok_button_text = "Confirm"
dialog_text = "Reset default keybinds?"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="OptionsControl/ConfigContainer/ConfigPanel/OptionsButtons/ResetDefKeybind" to="." method="_on_reset_default_keybinds_button"]
[connection signal="pressed" from="OptionsControl/ExitMenu" to="." method="_on_exit_menu_pressed"]
[connection signal="canceled" from="OptionsControl/ExitCheck" to="." method="_on_exit_check_canceled"]
[connection signal="confirmed" from="OptionsControl/ExitCheck" to="." method="_on_exit_check_confirmed"]
[connection signal="confirmed" from="OptionsControl/ResetBinds" to="." method="_on_reset_default_keybinds"]
